# Malden_image_creator

./: .env.example  .gitignore  Makefile  PROJECT_BRIEF.md  README.md  imgcreator.yaml  pyproject.toml  requirements.txt
docs/: prd.md
docs/analysis/: image-to-image-feature.md
docs/stories/: story-001-project-init.md  story-002-yaml-config.md  story-003-volcengine-api.md  story-004-basic-generate.md  story-005-template-engine.md  story-006-series-generation.md  story-007-history-tracking.md  story-008-export-profiles.md  story-009-image-to-image.md
imgcreator/: __init__.py
imgcreator/api/: __init__.py  base.py  volcengine.py
imgcreator/cli/: __init__.py  main.py
imgcreator/cli/commands/: __init__.py  config.py  export.py  generate.py  history.py  init.py
imgcreator/core/: __init__.py  config.py  history.py  pipeline.py  series.py  template.py
imgcreator/utils/: __init__.py  image.py
series/: README.md  destination-heroes.yaml  roleplay-roles.yaml  scenario-icons.yaml
tests/: __init__.py  test_config.py  test_export.py  test_generate.py  test_history.py  test_image_utils.py  test_img2img_integration.py  test_init.py  test_series.py  test_template.py  test_volcengine.py  test_volcengine_img2img.py
